[package]
name = "tide_bug_676"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = {git = "https://github.com/http-rs/tide"}
async-channel = "*"
futures = "*"
async-std = { version = "1.6.0", features = ["unstable", "attributes"] }
broadcaster = "*"
